prova de oslo tecnologias

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             </div>
                         </div>
 
-                        <button type="submit" class="btn btn-blue" onclick="enviar()">Enviar</button>
+                        <button type="button" class="btn btn-blue" onclick="enviar()">Enviar</button>
                     </form>
 
                     <div class="header-info">
